<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DoubleQ</string>
    <string name="access_location_is_required">Access location is required</string>
    <string name="allow">Allow</string>
    <string name="notifications_admin_channel_name" translatable="false">Global channel</string>
    <string name="notifications_admin_channel_description" translatable="false">Notifications sent from the app</string>
    <string name="enter_your_mobile_number">Enter your mobile number..</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="by_clicking_sign_in_you_agree_our">By clicking sign in you agree our</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_your_account">Create your account</string>
    <string name="and">and</string>
    <string name="no_connection">No internet connection</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="please_enter_the_4_digit_code_send_to_you_at">Please enter the 4-digit code send to you at</string>
    <string name="verify">Verify</string>
    <string name="did_not_receive_yet">Did not receive yet?</string>
    <string name="resend">Resend</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="leave_your_notes_here">Leave your notes here...</string>
    <string name="title">Title</string>
    <string name="enter_title_here">Enter title here</string>
    <string name="notes">Notes</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="personal_details">Personal Details</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="update">Update</string>
    <string name="notifications">Notifications</string>
    <string name="faq">FAQ</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="logout">Logout</string>
    <string name="replacements">Replacements</string>
    <string name="reason">Reason</string>
    <string name="why_do_you_want_to_cancel_the_roder">why do you want to cancel the roder?</string>
    <string name="quick_actions">Quick actions</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="ok">Ok</string>
    <string name="please_login_to_use_this_feature">Please login to use this feature</string>
    <string name="order">Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="problerms">Problerms</string>
    <string name="parts">Parts</string>
    <string name="warranty">Warranty:</string>
    <string name="fix_time">Fix Time:</string>
    <string name="sub_total">Sub Total</string>
    <string name="discount">Discount</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="orders">Orders</string>
    <string name="new_">New</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_order">Edit Order</string>
    <string name="find_item">Find item..</string>
    <string name="add">Add</string>
    <string name="items_added">items added</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="cart">Cart</string>
    <string name="delete_all">Delete all</string>
    <string name="details">Details</string>
    <string name="handover">Handover</string>
    <string name="edit">Edit</string>
    <string name="contact">Contact</string>
    <string name="call">Call</string>
    <string name="we_ve_received_your_order">we’ve received your order</string>
    <string name="we_ll_be_informing_you_once_the_replacements_are_ready">we’ll be informing you once the replacements are ready.</string>
    <string name="view_order">View Order</string>
    <string name="model">Model</string>
    <string name="select_color">Select Color</string>
    <string name="next">Next</string>
    <string name="you_order_is_received_successfully_we_are_working_to_get_best_offer_for_you">You order is received successfully. We are working to get best offer for you.</string>
    <string name="date_amp_time"><![CDATA[Date & time]]></string>
    <string name="identified_problem">Identified problem</string>
    <string name="new_parts">New Parts</string>
    <string name="enter_your_message">Enter your message...</string>
    <string name="get_started">Get Started</string>
    <string name="cancel">Cancel</string>
    <string name="device_to_repair">Device to Repair</string>
    <string name="new_request">New Request</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="favorites">Favorites</string>
    <string name="warranties">Warranties</string>
    <string name="products">Products</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="repair">Repair</string>
    <string name="give_us_a_quick_rating_so_we_know_if_you_like_it">Give us a quick rating so we know if you like it?</string>
    <string name="rate_order">Rate order</string>
    <string name="choose_your_device">Choose your device.</string>
    <string name="accessories">Accessories</string>
    <string name="see_all">See All</string>
    <string name="recommended_for_you">Recommended For You</string>
    <string name="item_not_found">Item not found</string>
    <string name="clear_all">Clear All</string>
    <string name="recent_keywords">Recent Keywords</string>
    <string name="define_problems">Define Problems</string>
    <string name="looking_for_fast_repair">Looking for fast repair?</string>
    <string name="try_it_for_97_sr_in_25hr">Try It for 97 SR in 25hr</string>
    <string name="start_now">Start now!</string>
    <string name="need_fix">Need Fix</string>
    <string name="don_t_miss_replacement_promotion">Don’t miss replacement promotion!</string>
    <string name="selected_parts">Selected Parts</string>
    <string name="problems_were_selected">Problems were selected</string>
    <string name="items_were_added_to_cart">items were added to cart</string>
    <string name="by_clicking_confirm_order_you_agree_our">By clicking confirm order you agree our</string>
    <string name="device_selected">Device selected</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="request_services">Request Services</string>
    <string name="your_order_need_to_be_checked_in_double_center">Your order need to be checked in Double Center</string>
    <string name="do_you_want_to_accept_to_check_your_mobile_in_double">Do you want to accept to check your mobile in Double?</string>
    <string name="need_to_fix">Need To Fix</string>
    <string name="need_to_replace">Need To Replace</string>
    <string name="the_item_is_shipped_to_double_q_center">The item is shipped to Double Q center!</string>
    <string name="would_you_like_to_reschedule_the_order">Would you like to reschedule the order.</string>
    <string name="pay">Pay</string>
    <string name="what_are_you_looking_for_today">What are you looking for today?</string>
    <string name="full_name">Full name</string>
    <string name="required">This field is required!</string>
    <string name="login_as_a_guest">Login as a Guest</string>
    <string name="must_start_by_5">Must start by 5</string>
    <string name="not_valid_phone">Enter valid phone number!</string>
    <string name="no_more">No more!</string>
    <string name="no_data">No Data</string>
    <string name="no_changes">You made no changes!</string>
    <string name="accessGalleryIdNeeded">Access gallary is required!</string>
    <string name="please_enter_the_4_digit_code_send_to_your_number">Please enter the 4-digit code send to your number</string>
    <string name="enter_ver_code">Enter verification code!</string>
    <string name="accept_agreement">You must accept our Terms and conditions, and privacy policy</string>
    <string name="sar">SAR</string>
    <string name="tags">Tags</string>
    <string name="available_colors">Available colors</string>
</resources>