<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_320dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingVertical="@dimen/_20dp"
    android:background="@drawable/bg_req_white_r10">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_order"
        style="@style/text_black_app_bold_14"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/give_us_a_quick_rating_so_we_know_if_you_like_it"
        style="@style/text_gray90_regular_12"
        android:layout_marginHorizontal="@dimen/_20dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10dp"/>
    <androidx.appcompat.widget.AppCompatRatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/RatingBar"
        android:layout_marginTop="@dimen/_15dp"
        />
    <LinearLayout
        android:id="@+id/linearNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/hs"
        android:layout_marginTop="@dimen/_15dp"
        android:visibility="gone">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            style="@style/text_black_app_regular_12"/>
        <EditText
            android:id="@+id/notesEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/_12dp"
            android:paddingHorizontal="@dimen/_12dp"
            android:hint="@string/leave_your_notes_here"
            android:textColorHint="#B5B5B5"
            style="@style/text_black_app_regular_12"
            android:background="@drawable/bg_req_edittext"
            android:layout_marginTop="@dimen/_8dp"
            android:minHeight="@dimen/_70dp"
            android:maxHeight="@dimen/_100dp"
            android:gravity="top"
            />
    </LinearLayout>
    <android.widget.Button
        android:id="@+id/submitBtn"
        android:layout_width="@dimen/_160dp"
        android:layout_height="@dimen/_38dp"
        android:text="@string/submit"
        style="@style/text_black_app_regular_14"
        android:background="@drawable/bg_btn_main"
        android:layout_marginHorizontal="@dimen/hs"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:textAllCaps="false"
        />
</LinearLayout>