<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_splash_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="@dimen/_24dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_120dp"
                android:layout_height="@dimen/_37dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/text_yellow_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_req_gray55_r4"
                android:drawablePadding="@dimen/_8dp"
                android:paddingHorizontal="@dimen/_8dp"
                android:paddingVertical="@dimen/_7dp"
                android:text="@string/arabic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:drawableStartCompat="@drawable/ic_arrow_down" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_req_white_r20top"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_24dp"
            android:paddingVertical="@dimen/_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">

            <TextView
                style="@style/text_black_app_bold_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_your_account" />

            <TextView
                style="@style/text_gray90_bold_18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                android:text="@string/welcome_back" />

            <include
                android:id="@+id/includePhone"
                layout="@layout/view_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp" />

            <android.widget.Button
                android:id="@+id/signInBtn"
                style="@style/text_black_app_regular_16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginTop="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:background="@drawable/bg_btn_main"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/agreementCheckBox"
                style="@style/text_gray65_regular_12"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_22dp"
                android:button="@drawable/button_box_black"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_8dp"
                android:text="@string/by_clicking_sign_in_you_agree_our" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6dp">

                <TextView
                    android:id="@+id/termsTv"
                    style="@style/text_gray65_bold_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_and_conditions"
                    android:background="@drawable/bg_req_trans_lightgray"/>

                <TextView
                    style="@style/text_gray65_regular_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:text="@string/and" />

                <TextView
                    android:id="@+id/policyTv"
                    style="@style/text_gray65_bold_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4dp"
                    android:text="@string/privacy_policy"
                    android:background="@drawable/bg_req_trans_lightgray"/>

            </LinearLayout>
            <TextView
                android:id="@+id/guestLoginTv"
                style="@style/text_gray65_bold_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_as_a_guest"
                android:layout_marginTop="@dimen/_15dp"
                android:paddingHorizontal="@dimen/_8dp"
                android:paddingVertical="@dimen/_5dp"
                android:background="@drawable/bg_req_trans_lightgray"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>