<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_req_black_r12top"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/hs"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <View
        android:layout_width="@dimen/_50dp"
        android:layout_height="@dimen/_6dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12dp"
        android:background="@drawable/bg_req_gray55_r4" />

    <TextView
        style="@style/text_white_regular_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18dp"
        android:text="@string/reason" />

    <android.widget.Spinner
        android:id="@+id/reasonSP"
        style="@style/SpinnerTheam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:dropDownSelector="@drawable/bg_req_trans_gray"
        android:popupBackground="@drawable/bg_req_edittext_dark"
        android:spinnerMode="dropdown" />

    <TextView
        style="@style/text_white_regular_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18dp"
        android:text="@string/notes" />

    <EditText
        android:id="@+id/notesEt"
        style="@style/text_black_app_regular_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@drawable/bg_req_edittext_dark"
        android:gravity="top"
        android:hint="@string/why_do_you_want_to_cancel_the_roder"
        android:maxHeight="@dimen/_110dp"
        android:minHeight="@dimen/_110dp"
        android:paddingHorizontal="@dimen/_13dp"
        android:paddingVertical="@dimen/_12dp"
        android:textColorHint="#B5B5B5" />

    <android.widget.Button
        android:id="@+id/cancelBtn"
        style="@style/text_black_app_regular_16"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginBottom="@dimen/_15dp"
        android:background="@drawable/bg_btn_main"
        android:text="@string/cancel_order"
        android:textAllCaps="false" />
</LinearLayout>