<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_color"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_splash_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="@dimen/_16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_us"
                style="@style/text_black_app_bold_14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="@dimen/_45dp"
                android:layout_height="@dimen/_45dp"
                android:src="@drawable/ic_back"
                android:background="@drawable/bg_circle_white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_req_white_r20top"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_24dp"
            android:paddingVertical="@dimen/_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                style="@style/text_black_app_regular_12"/>
            <EditText
                android:id="@+id/titleEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_12dp"
                android:paddingHorizontal="@dimen/_13dp"
                android:inputType="textPersonName"
                android:hint="@string/enter_title_here"
                android:textColorHint="#B5B5B5"
                style="@style/text_black_app_regular_12"
                android:background="@drawable/bg_req_edittext"
                android:layout_marginTop="@dimen/_8dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                style="@style/text_black_app_regular_12"
                android:layout_marginTop="@dimen/_20dp"/>
            <EditText
                android:id="@+id/noteEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/_90dp"
                android:gravity="top"
                android:paddingVertical="@dimen/_12dp"
                android:paddingHorizontal="@dimen/_13dp"
                android:hint="@string/leave_your_notes_here"
                android:textColorHint="#B5B5B5"
                style="@style/text_black_app_regular_12"
                android:background="@drawable/bg_req_edittext"
                android:layout_marginTop="@dimen/_8dp"
                />
            <android.widget.Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48dp"
                android:text="@string/submit"
                style="@style/text_black_app_regular_16"
                android:background="@drawable/bg_btn_main"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:textAllCaps="false"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>