<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="@dimen/_45dp"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/_16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_req_black_r8top"
        android:paddingVertical="@dimen/_10dp">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12dp"
            android:src="@drawable/ic_logo_yellow" />
        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calender_big"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/_10dp"
            android:tint="@color/main_color"
            tools:ignore="UseAppTint" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_req_gray_r8bottom"
        android:paddingHorizontal="@dimen/_12dp"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_24dp">
        <TextView
            android:id="@+id/titleTv"
            style="@style/text_black_app_simibold_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_item_is_shipped_to_double_q_center"
            />
        <TextView
            android:id="@+id/contentTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/would_you_like_to_reschedule_the_order"
            style="@style/text_gray90_regular_12"
            android:layout_marginTop="@dimen/_5dp"/>
        <TextView
            style="@style/text_black_app_regular_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18dp"
            android:text="@string/date"
            android:layout_marginBottom="@dimen/_8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVDates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="10"
            tools:listitem="@layout/row_date"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            />
        <TextView
            style="@style/text_black_app_regular_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18dp"
            android:text="@string/time"
            android:layout_marginBottom="@dimen/_8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVTimes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="10"
            tools:listitem="@layout/row_date"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/_12dp">
        <TextView
            android:id="@+id/cancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30dp"
            android:text="@string/cancel"
            style="@style/text_yellow_regular_12"
            android:background="@drawable/bg_req_black_r4"
            android:layout_marginHorizontal="@dimen/_6dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="@dimen/_15dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/confirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30dp"
            android:text="@string/confirm"
            style="@style/text_black_app_regular_12"
            android:background="@drawable/bg_btn_main"
            android:layout_marginHorizontal="@dimen/_6dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:paddingHorizontal="@dimen/_15dp"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:id="@+id/timeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="44 minutes ago"
        style="@style/text_gray90_regular_10"/>
</LinearLayout>